seqra-cir-sast-dataflow: fix jetbrains.exodus warning trace